[Enhancement] Make external statistics collection survive a busy backend, finish across runs, and estimate from the rows it collected (#63508)
Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>